--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
     "gulp-uncss": "^1.0.1",
+    "gulp-webp": "^3.0.0",
     "js-yaml": "^3.11.0",
     "jshint": "^2.9.6",
     "jshint-loader": "^0.8.4",
@@ -54,6 +55,7 @@
     "normalize.css": "^8.0.0",
     "panini": "^1.3.0",
     "rimraf": "^2.4.3",
+    "scrollreveal": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "style-sherpa": "^1.0.0",
     "sw-precache": "^5.2.1",
