--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gel-sass-tools": "^1.2.1",
     "handlebars": "^4.0.11",
     "jquery": ">=3.0.0",
+    "juxtaposejs": "^1.1.6",
     "lodash": "^4.17.10",
     "lozad": "^1.6.0",
     "motion-ui": "~1.2.2",
