--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lozad": "^1.6.0",
     "motion-ui": "~1.2.2",
     "node-sass": "^4.7.2",
+    "path": "^0.12.7",
     "sass-mq": "^5.0.0",
     "sass-tools": "^2.1.2"
   },
